# vimmit-academic

./: .gitignore  terraform.tfstate
backend/: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.local.yml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: c12805d27770_initial_schema.py
backend/src/: main.py  verify_iam.py
backend/src/api/financial/: __init__.py
backend/src/api/shared/: attachments.py
backend/src/application/administrative/: admission_service.py  student_directory_service.py
backend/src/application/financial/: __init__.py  circularization_service.py  cost_service.py  payment_service.py
backend/src/application/shared/: attachment_service.py
backend/src/domain/administration/: models.py
backend/src/domain/calendar/: schemas.py
backend/src/domain/campus/: models.py  schemas.py
backend/src/domain/enrollment/: models.py  schemas.py
backend/src/domain/financial/: __init__.py  models.py  schemas.py
backend/src/domain/identity/: models.py
backend/src/domain/programs/: models.py  schemas.py
backend/src/domain/shared/: attachments.py  baseEntity.py
backend/src/domain/tenants/: models.py  schemas.py
backend/src/infrastructure/config/: settings.py
backend/src/infrastructure/email/: email_service.py
backend/src/infrastructure/financial/: __init__.py
backend/src/infrastructure/persistence/: database.py  models.py
backend/src/infrastructure/security/: hash_provider.py  token_provider.py
backend/src/infrastructure/storage/: protocol.py  s3.py
backend/src/infrastructure/templates/: base_email.html
backend/src/scripts/: create_test_user.py  init_tenant.py  reset_db.py  seed.py
backend/src/tests/: conftest.py  test_e2e_bootstrap.py  test_hash_provider.py
backend/src/tests/shared/: test_storage.py
(+233 files in other folders)
