[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.37",
    "alembic>=1.14.1",
    "pydantic-settings>=2.7.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.7",
]
